trunk/Archive2/a3/c7aa8869943ec6/output
main.cpp:37:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 error generated.
